# pico-midi2cv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
enclosure/: panel.ai
schematics/: fp-info-cache  pico-midi2cv-cache.lib  pico-midi2cv-rescue.kicad_sym  pico-midi2cv-rescue.lib  pico-midi2cv.kicad_pcb  pico-midi2cv.kicad_pcb-bak  pico-midi2cv.kicad_prl  pico-midi2cv.kicad_pro  pico-midi2cv.kicad_sch  pico-midi2cv.net  pico-midi2cv.pro  pico-midi2cv.sch  pico-midi2cv.sch-bak  sym-lib-table
schematics/old_format/: pico-midi2cv.sch  pico-midi2cv.sch-bak
src/: main.cpp  main.h  midi.cpp  midi.h  midi_handler.cpp  midi_handler.h  midi_to_cv.cpp  midi_to_cv.h  settings.h  ui.cpp  ui.h
